--- a/assets/global.css
+++ b/assets/global.css
@@ -65,8 +65,8 @@ a {
 }
 footer {
 	text-align: left;
-	margin-bottom: 1.5vw;
-	margin-top: 1.5vh;
+	margin-bottom: 20px;
+	margin-top: 50px;
 }
 
 @media screen and (max-width: 800px) {
