--- a/assets/global.css
+++ b/assets/global.css
@@ -68,6 +68,29 @@ footer {
 	margin-bottom: 30px;
 	margin-top: 50px;
 }
+.button {
+	font-family: arial;
+	font-size: 15px;
+	color: #ffc105;
+	background: black;
+	padding: 10px 15px 10px 15px;
+	border: none;
+	border-radius: 10px;
+	text-decoration: none;
+	cursor: pointer;
+	transition: top 0.1s, left 0.1s, background 0.5s, color 0.5s;
+	position: relative;
+	top: 0;
+	left: 0;
+}
+.button:hover {
+	background: #ffc105;
+	color: black;
+}
+.button:focus {
+	top: 3px;
+	left: 1px;
+}
 
 @media screen and (max-width: 800px) {
 	body {
