--- a/assets/global.css
+++ b/assets/global.css
@@ -100,6 +100,9 @@ footer {
 		margin-left: 2.5%;
 		margin-right: 2.5%;
 	}
+	footer {
+		margin-bottom: 110px;
+	}
 }
 
 @keyframes moveNamePlate {
