--- a/assets/home.css
+++ b/assets/home.css
@@ -137,6 +137,7 @@
   font-size: 1.5em;
   cursor: pointer;
   letter-spacing: 0.07em;
+  text-decoration: none;
 }
 .fancy-button a .text {
   font-family: proxima-nova, monospace;
