--- a/assets/home.css
+++ b/assets/home.css
@@ -109,7 +109,7 @@
 /* Fancy Button Animation Start */
 
 .fancy-button, .scene {
-  height: 100vh;
+  /* height: 100vh; */
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
@@ -117,15 +117,15 @@
   -webkit-display: flex;
   -webkit-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -webkit-align-items: center;
+  /* position: absolute; */
+  /* top: 0; */
+  /* right: 0; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* -webkit-justify-content: center; */
+  /* -webkit-align-items: center; */
 }
 
 .fancy-button a {
