--- a/assets/home.css
+++ b/assets/home.css
@@ -1,114 +1,179 @@
-body {
-	margin: 0px;
-	font-family: 'Roboto Mono';
-	color: #fff;
-	background-color: #212121;
+#typedTitle {
 	text-align: center;
-}
-nav {
-	background-color: #000;
-	height: auto;
-	width: 100%;
-	text-align: center;
-}
-main {
 	position: relative;
-	margin-top: calc(9vh + 6vw + 20px);
-	margin-left: 65px;
-	margin-right: 65px;
-}
-#nav {
-	position: fixed;
-	width: 100%;
-	height: auto;
-	margin: 0px;
-	top: 0px;
-	z-index: 100;
-}
-.nav-fade {
-	height: 4vh;
-	background: linear-gradient(#000, rgba(0,0,0,0));
-}
-.nameplate {
-	width: 60vw;
-	height: auto;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 100vh;
-	margin-bottom: 10px;
-	position: relative;
-	top: 0;
-	bottom: 0;
-	padding: none;
-	animation-name: moveNamePlate;
+	top: 30vh;
+	font-size: 5vh;
+	animation-name: moveTitle;
 	animation-duration: 1.5s;
-	animation-delay: 0.5s;
+	animation-delay: 3.05s;
 	animation-fill-mode: forwards;
 }
-.logo1 {
-	position: absolute;
-	left: 0px;
-	height: calc((60vw / 10) + 20px);
-	width: auto;
-}
-.logo2 {
-	position: absolute;
-	right: 0px;
-	height: calc((60vw / 10) + 20px);
-	width: auto;
-}
-h1 {
-	text-align: center;
-}
-a {
-	color: #ffc105;
-	text-decoration: underline;
-	text-decoration-color: white;
-}
-footer {
+#typedText {
 	text-align: left;
-	margin-bottom: 30px;
-	margin-top: 50px;
-}
-.button {
-	font-family: arial;
-	font-size: 15px;
-	color: #ffc105;
-	background: black;
-	padding: 10px 15px 10px 15px;
-	border: none;
-	border-radius: 10px;
-	text-decoration: none;
-	cursor: pointer;
-	transition: top 0.1s, left 0.1s, background 0.5s, color 0.5s;
 	position: relative;
-	top: 0;
-	left: 0;
+	top: 30vh;
+	animation-name: moveTitle;
+	animation-duration: 1.5s;
+	animation-delay: 3.05s;
+	animation-fill-mode: forwards;
+	margin-bottom: 200px;
 }
-.button-enabled:hover {
-	background: #ffc105;
-	color: black;
+#YTChannel {
+	width: calc(90vw - 130px);
+	height: calc((90vw - 130px) / 16 * 9);
 }
-.button-enabled:focus {
-	top: 3px;
-	left: 1px;
+#twitterContainer {
+	margin-top: 5vh;
+	margin-left: 15%;
+	margin-right: 15%;
+}
+.skip-button {
+	z-index: 5;
+	position: fixed;
+	bottom: 65px;
+	right: 20px;
+	display: none;
+}
+.YTContainer {
+	position: relative;
+	top: 10vh;
+	opacity: 0;
+	display: none;
 }
 
 @media screen and (max-width: 800px) {
-	body {
-		margin-bottom: 55px;
+	.skip-button {
+		bottom: 115px;
 	}
-	main {
-		margin-left: 2.5%;
-		margin-right: 2.5%;
+	#YTChannel {
+		width: 90vw;
+		height: calc(90vw / 16 * 9);
 	}
-	footer {
-		margin-bottom: 110px;
+	#twitterContainer {
+		margin-top: 5vh;
+		margin-left: 15%;
+		margin-right: 15%;
 	}
 }
 
-@keyframes moveNamePlate {
+@keyframes moveTitle {
 	to {
-		margin-top: 10px;
+		top: 0px;
 	}
 }
+
+/* Fancy Button Animation Start */
+
+.fancy-button, .scene {
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-display: flex;
+  -webkit-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+}
+
+.fancy-button a {
+  color: white;
+  padding: 0.7em calc(0.7em * 1.2);
+  display: inline-block;
+  border: 3px solid transparent;
+  position: relative;
+  font-size: 1.5em;
+  cursor: pointer;
+  letter-spacing: 0.07em;
+  text-decoration: none;
+}
+.fancy-button a .text {
+  font-family: proxima-nova, monospace;
+  transform: translate3d(0, 0.7em, 0);
+  display: block;
+  transition: transform 0.4s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+.fancy-button a:after {
+  position: absolute;
+  content: '';
+  bottom: -3px;
+  left: calc(0.7em * 1.2);
+  right: calc(0.7em * 1.2);
+  height: 3px;
+  background: #ffc105;
+  transition: transform 0.8s cubic-bezier(1, 0, 0.37, 1) 0.2s, right 0.2s cubic-bezier(0.04, 0.48, 0, 1) 0.6s, left 0.4s cubic-bezier(0.04, 0.48, 0, 1) 0.6s;
+  transform-origin: left;
+}
+.fancy-button .line {
+  position: absolute;
+  background: #ffc105;
+}
+.fancy-button .line.-right, .fancy-button .line.-left {
+  width: 3px;
+  bottom: -3px;
+  top: -3px;
+  transform: scale3d(1, 0, 1);
+}
+.fancy-button .line.-top, .fancy-button .line.-bottom {
+  height: 3px;
+  left: -3px;
+  right: -3px;
+  transform: scale3d(0, 1, 1);
+}
+.fancy-button .line.-right {
+  right: -3px;
+  transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.23s;
+  transform-origin: top;
+}
+.fancy-button .line.-top {
+  top: -3px;
+  transition: transform 0.08s linear 0.43s;
+  transform-origin: left;
+}
+.fancy-button .line.-left {
+  left: -3px;
+  transition: transform 0.08s linear 0.51s;
+  transform-origin: bottom;
+}
+.fancy-button .line.-bottom {
+  bottom: -3px;
+  transition: transform 0.3s cubic-bezier(1, 0, 0.65, 1.01);
+  transform-origin: right;
+}
+.fancy-button a:hover .text,
+.fancy-button a:active .text {
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.6s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+.fancy-button a:hover:after,
+.fancy-button a:active:after {
+  transform: scale3d(0, 1, 1);
+  right: -3px;
+  left: -3px;
+  transform-origin: right;
+  transition: transform 0.2s cubic-bezier(1, 0, 0.65, 1.01) 0.17s, right 0.2s cubic-bezier(1, 0, 0.65, 1.01), left 0s 0.3s;
+}
+.fancy-button a:hover .line,
+.fancy-button a:active .line {
+  transform: scale3d(1, 1, 1);
+}
+.fancy-button a:hover .line.-right,
+.fancy-button a:active .line.-right {
+  transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.2s;
+  transform-origin: bottom;
+}
+.fancy-button a:hover .line.-top,
+.fancy-button a:active .line.-top {
+  transition: transform 0.08s linear 0.4s;
+  transform-origin: right;
+}
+.fancy-button a:hover .line.-left,
+.fancy-button a:active .line.-left {
+  transition: transform 0.08s linear 0.48s;
+  transform-origin: top;
+}
+.fancy-button a:hover .line.-bottom,
+.fancy-button a:active .line.-bottom {
+  transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
+  transform-origin: left;
+}
+
+/* Fancy Button Animation End */
