Change text alignment

--- a/assets/global.css
+++ b/assets/global.css
@@ -3,7 +3,7 @@ body {
 	font-family: 'Roboto Mono';
 	color: #fff;
 	background-color: #212121;
-	text-align: center;
+	text-align: left;
 }
 nav {
 	background-color: #000;
