Alter scroll up buttons Make both versions work properly & change position of the up arrows inside the buttons

--- a/assets/global.css
+++ b/assets/global.css
@@ -255,9 +255,9 @@ footer {
 	top: 5px;
 }
 .top-scroll-button img {
-	position: absolute;
+	/* position: absolute;
 	right: 7.5px;
-	top: 10.5px;
+	top: 10.5px; */
 	padding: 5px;
 	width: 35px;
 	height: auto;
