Change position of image inside scroll-to-top button

--- a/assets/global.css
+++ b/assets/global.css
@@ -255,9 +255,8 @@ footer {
 	top: 5px;
 }
 .top-scroll-button img {
-	/* position: absolute;
-	right: 7.5px;
-	top: 10.5px; */
+	position: absolute;
+	top: 2px;
 	padding: 5px;
 	width: 35px;
 	height: auto;
