--- a/assets/global.css
+++ b/assets/global.css
@@ -255,7 +255,7 @@ footer {
 	background-color: #111;
 }
 .top-scroll-button:hover img {
-	bottom: 5px;
+	top: 0px;
 }
 .top-scroll-button img {
 	position: relative;
