--- a/assets/home.css
+++ b/assets/home.css
@@ -1,7 +1,7 @@
 #title {
 	text-align: center;
 	position: relative;
-	top: 15vh;
+	transform: translateY(15vh);
 	font-size: 5vh;
 	animation-name: moveContent;
 	animation-duration: 1.5s;
