--- a/assets/global.css
+++ b/assets/global.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0px;
-	font-family: 'Roboto Mono';
+	font-family: 'Montserrat';
 	color: #fff;
 	background-color: #212121;
 	text-align: left;
