--- a/assets/global.css
+++ b/assets/global.css
@@ -65,8 +65,8 @@ h1 {
 	text-decoration: underline;
 	text-decoration-color: white;
 } */
-a {
-	background-image: linear-gradient(120deg, #0543ff 0%, #0543ff 100%);
+main a {
+	background-image: linear-gradient(120deg, #000 0%, #000 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.1em;
 	background-position: 0 92%;
@@ -74,8 +74,8 @@ a {
 	color: #ffc105;
 	text-decoration: none;
 }
-a:hover {
-  background-size: 100% 88%;
+main a:hover {
+  background-size: 100% 100%;
 }
 footer {
 	text-align: left;
