--- a/assets/global.css
+++ b/assets/global.css
@@ -26,8 +26,34 @@ main {
 	z-index: 100;
 }
 .nav-fade {
-	height: 1.5vh;
+	width: 100%;
 	background: linear-gradient(#000, rgba(0,0,0,0));
+}
+.one, .two, .three, .four {
+	text-align: center;
+	display: inline-block;
+	width: 25%;
+	padding: .75rem 0;
+	margin: 0;
+	text-decoration: none;.
+	color: #ffc105;
+}
+.two:hover ~ hr {
+	margin-left: 25%;
+}
+.three:hover ~ hr {
+	margin-left: 50%;
+}
+.four:hover ~ hr {
+	margin-left: 75%;
+}
+hr {
+	height: .25rem;
+	width: 25%;
+	margin: 0;
+	background: #ffc105;
+	border: none;
+	transition: .3s ease-in-out;
 }
 .nameplate {
 	width: 60vw;
