--- a/assets/global.css
+++ b/assets/global.css
@@ -35,7 +35,7 @@ main {
 	width: 25%;
 	padding: .75rem 0;
 	margin: 0;
-	text-decoration: none;.
+	text-decoration: none;
 	color: #ffc105;
 }
 .two:hover ~ hr {
