--- a/assets/global.css
+++ b/assets/global.css
@@ -92,7 +92,7 @@ h1 {
 	text-decoration-color: white;
 } */
 main a {
-	background-image: linear-gradient(120deg, #000 0%, #000 100%);
+	background-image: linear-gradient(120deg, #000 0%, #fff 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.1em;
 	background-position: 0 92%;
@@ -144,7 +144,8 @@ footer {
 		margin-bottom: 110px;
 	}
 	.top-scroll-button {
-		bottom: 115px;
+		/* bottom: 115px; */
+		bottom: 160px;
 	}
 }
 
