--- a/assets/global.css
+++ b/assets/global.css
@@ -92,7 +92,7 @@ h1 {
 	text-decoration-color: white;
 } */
 main a {
-	background-image: linear-gradient(120deg, #000 0%, #fff 100%);
+	background-image: linear-gradient(120deg, #585858 0%, #fff 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.1em;
 	background-position: 0 92%;
@@ -101,7 +101,8 @@ main a {
 	text-decoration: none;
 }
 main a:hover {
-  background-size: 100% 100%;
+	background-image: linear-gradient(120deg, #0543ff 0%, #0543ff 100%);
+	background-size: 100% 100%;
 }
 footer {
 	text-align: left;
