--- a/assets/global.css
+++ b/assets/global.css
@@ -101,7 +101,7 @@ main a {
 	text-decoration: none;
 }
 main a:hover {
-	background-image: linear-gradient(120deg, #0543ff 0%, #0543ff 100%);
+	background-image: linear-gradient(120deg, #3f3f3f 0%, #545454 100%);
 	background-size: 100% 100%;
 }
 footer {
