--- a/assets/global.css
+++ b/assets/global.css
@@ -101,8 +101,8 @@ main a {
 	text-decoration: none;
 }
 main a:hover {
-	background-image: linear-gradient(120deg, #3f3f3f 0%, #767676 100%);
 	background-size: 100% 100%;
+	color: #fff;
 }
 footer {
 	text-align: left;
