--- a/assets/global.css
+++ b/assets/global.css
@@ -38,6 +38,9 @@ main {
 	text-decoration: none;
 	color: #ffc105;
 }
+.one:hover ~ hr {
+	margin-left: 0;
+}
 .two:hover ~ hr {
 	margin-left: 25%;
 }
@@ -50,7 +53,8 @@ main {
 hr {
 	height: .25rem;
 	width: 25%;
-	margin: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 	background: #ffc105;
 	border: none;
 	transition: .3s ease-in-out;
