--- a/assets/global.css
+++ b/assets/global.css
@@ -91,7 +91,7 @@ h1 {
 	text-align: center;
 }
 main a {
-	background-image: linear-gradient(130deg, #585858 0%, #fff 100%);
+	background-image: linear-gradient(130deg, #3d3d3d 0%, #797979 100%);
 	background-repeat: no-repeat;
 	background-size: 100% 0.1em;
 	background-position: 0 92%;
@@ -100,9 +100,7 @@ main a {
 	text-decoration: none;
 }
 main a:hover {
-	background-image: linear-gradient(130deg, #cc9a04 0%, #212121 100%);
 	background-size: 100% 100%;
-	color: #fff;
 }
 footer {
 	text-align: left;
